# annoy-server

./: .gitignore  .travis.yml  Cargo.toml  cargo.toml  readme.md
annoy-rs/: Cargo.toml
annoy_rs/: Cargo.toml  build.rs  test.tree
annoy_rs/src/: annoy.rs  err.rs  idmapping.rs  lib.rs  vector.rs
annoy_rs/src_cpp/: annoyrust.cpp  annoyrust.h  kissrandom.h
build_utils/: Dockerfile  annoy.sh  capnp.sh  cross_compile_deps.sh  cross_compile_source_me.sh  docker_build.sh  docker_run.sh  kcov.sh
doc/: aliases.js  search-index.js
doc/annoy_rs/: all.html  index.html  sidebar-items.js
doc/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
doc/bytes/: enum.BigEndian.html  enum.LittleEndian.html  struct.Bytes.html  struct.BytesMut.html
doc/capnp/: all.html  enum.ErrorKind.html  enum.OutputSegments.html  index.html  macro.capnp_word.html  sidebar-items.js  struct.Error.html  struct.MessageSize.html  struct.NotInSchema.html  struct.Word.html  type.Result.html
doc/capnp_futures/: all.html  fn.write_queue.html  index.html  sidebar-items.js  struct.ReadStream.html  struct.Sender.html  struct.WriteQueue.html  write_queue.v.html
doc/capnp_rpc/: ImbuedMessageBuilder.t.html  IncomingMessage.t.html  OutgoingMessage.t.html  RpcSystem.t.html  VatNetwork.t.html  all.html  fn.new_promise_client.html  index.html  macro.pry.html  sidebar-items.js  (+8 more)
knn-serving/: Cargo.toml
knn_serving/: Cargo.toml  build.rs
knn_serving/src/: client.rs  err.rs  knn.rs  main.rs  server.rs  service.capnp  service.rs  util.rs
knn_serving_api/: Cargo.toml
test_knn_serving/: build_vector.py  knn_call.py  knn_http_call.py  knn_load.py  load_test.py  test.py
(+2168 files in other folders)
