[package]
name = "knn_serving"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]

[dependencies]
annoy_rs = { path = "../annoy_rs" }
hyper = "0.12"
knn_serving_api = {path="../knn_serving_api"}
capnp = "0.9"
capnp-rpc = "0.9"
capnp-futures = "0.9"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-curl = "0.1"
tokio-threadpool = "0.1"
tokio-current-thread = "0.1"
tokio-executor = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.6"
curl = "0.4"
bytes = "0.4"
rand = "0.6"

[build-dependencies]
capnpc = "0.9"